--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
-<title>Edit Product Details</title>
+<title>All Employee</title>
 <th:block th:include="layout/header"></th:block>
 </head>
 
@@ -10,22 +10,28 @@
 		<h2>Employee</h2>
 		<table class="table table-striped">
 			<tr>
-				<th>Id</th>
 				<th>Name</th>
 				<th>Email</th>
 				<th>User ID</th>
 				<th>Roles</th>
 				<th>Manger Id</th>
 			</tr>
-			<tr th:each="employee : ${employees}">
+			<tr th:each="employee, iter : ${employees}">
 
-				<td th:text=${employee.id}></td>
 				<td th:text="${employee.name}">Name</td>
 				<td th:text="${employee.email}">Email</td>
 				<td th:text=${employee.userid}>UserID</td>
 				<td th:text=*{employee.role.title}></td>
-				<td th:text="${employee.managerid}"></td>
-				<td><a th:href="${'/employees/update/' + employee.id}" class="btn btn-primary">Edit</a></td>
+				<td
+					th:if="${#maps.containsKey(employeesManagers, '__${employee.managerid}__')}"
+					th:text="${employeesManagers['__${employee.managerid}__'].name}">Nothing
+					here</td>
+				<td
+					th:unless="${#maps.containsKey(employeesManagers, '__${employee.managerid}__')}">Not assigned</td>
+				<td><a th:href="${'/employees/update/' + employee.id}"
+					class="btn btn-primary">Edit</a> <a
+					th:href="${'/employees/delete/' + employee.id}"
+					class="btn btn-danger">Delete</a></td>
 		</table>
 	</div>
 </div>
