--- a/src/main/resources/templates/addemployee.html
+++ b/src/main/resources/templates/addemployee.html
@@ -10,7 +10,7 @@
 	<h1>Add a new employee</h1>
 	<div>
 
-		<form class="form-horizontal needs-validation" novalidate th:object="${employee}"
+		<form class="form-horizontal" th:object="${employee}"
 			th:action="@{/employees}" method="POST">
 			<div class="form-group">
 				<div class="col-sm-10">
@@ -19,38 +19,34 @@
 			</div>
 
 			<fieldset class="col-md-4">
-				<label for="name">Name: </label> <input class="form-control"
-					type="text" id="name" th:field="*{name}" required />
-				<div class="valid-feedback">Valid.</div>
-				<div class="invalid-feedback">Name must consist a minium of 3 letters</div>
+				<label for="name">Name: </label> <input 
+					type="text" id="name" th:field="*{name}"/>
+				 <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</p>
 			</fieldset>
 
 			<fieldset class="form-group col-md-4">
 				<label for="email">Email : </label> <input class="form-control"
-					type="email" th:field="*{email}" required>
-					<div class="valid-feedback">Valid.</div>
-				<div class="invalid-feedback">Email must have a @. Please check your Input</div>
+					type="email" th:field="*{email}">
+				
 			</fieldset>
 
 			<fieldset class="form-group col-md-4">
 				<label for="userid">User Id</label> <input class="form-control"
-					type="text" id="userid" th:field="*{userid}" required>
-					<div class="valid-feedback">Valid.</div>
-				<div class="invalid-feedback">Userid must const a min of 6 characters.</div>
+					type="text" id="userid" th:field="*{userid}" >
+			
 			</fieldset>
 
 			<fieldset class="form-group col-md-4">
 				<label for="password">Password: </label> <input class="form-control"
-					type="password" id="password" th:field="*{password}" required>
-					<div class="valid-feedback">Valid.</div>
-				<div class="invalid-feedback">Password cannot be blank</div>
+					type="password" id="password" th:field="*{password}">
+		
 			</fieldset>
 
 			<fieldset class="form-group col-md-4">
 				<label for="role">Employee role : </label> <select
 					th:field="*{role}">
 					<option th:each="role : ${roles}" th:value="${role.id}"
-						th:text="${role.title}"></option>
+						th:text="${role.title}">Null</option>
 				</select>
 			</fieldset>
 
@@ -70,26 +66,6 @@
 
 </div>
 <!-- end of container -->
-<script>
-// Disable form submissions if there are invalid fields
-(function() {
-  'use strict';
-  window.addEventListener('load', function() {
-    // Get the forms we want to add validation styles to
-    var forms = document.getElementsByClassName('needs-validation');
-    // Loop over them and prevent submission
-    var validation = Array.prototype.filter.call(forms, function(form) {
-      form.addEventListener('submit', function(event) {
-        if (form.checkValidity() === false) {
-          event.preventDefault();
-          event.stopPropagation();
-        }
-        form.classList.add('was-validated');
-      }, false);
-    });
-  }, false);
-})();
-</script>
 
 </body>
 </html>
