--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -5,6 +5,7 @@
 <th:block th:include="layout/header"></th:block>
 </head>
 
+<div th:if="${message}" th:text="${message}" th:class="${'alert ' + alertClass}" style="text-align: center"/></div>
 <div class="container">
 	<div th:if="${not #lists.isEmpty(employees)}">
 		<h2>Employee</h2>
