add edit role controller and html

--- a/src/main/resources/templates/editemployee.html
+++ b/src/main/resources/templates/editemployee.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<title>Edit Employee</title>
+<head lang="en">
+<title>Modify Employee Details</title>
 <th:block th:include="layout/header"></th:block>
-
-
+</head>
+<body>
 
 <div class="container">
 
@@ -57,4 +58,5 @@
 </div>
 <!-- end of container -->
 
-<th:block th:include="layout/footer"></th:block>
+</body>
+</html>
