--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -20,6 +20,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/employees/add">Add Employee</a>
+          <a class="nav-link" href="/roles">View Roles</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
