--- a/src/main/resources/templates/editemployee.html
+++ b/src/main/resources/templates/editemployee.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container mt-5">
 
 	<h1>Edit Employee</h1>
 	<form class="form-horizontal" th:object="${employee}"
