--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -27,7 +27,9 @@
           <a class="dropdown-item" href="/employees/">View All Employee</a>
           <a class="dropdown-item" href="/employees/add">Add new Employee</a>
              <a class="dropdown-item" href="/roles">Edit Roles</a>
+             </div>
       </li>
+      
       <li class="nav-item">
         <a class="nav-link disabled" href="#">Disabled</a>
       </li>
