--- a/src/main/resources/templates/leave.html
+++ b/src/main/resources/templates/leave.html
@@ -17,7 +17,7 @@
 			<th>Contact Details</th>
 			<th>Status</th>
 		</tr>
-		<tr th:each="lv : ${leavedetails}">
+		<tr th:each="lv : ${#list.sort(leavedetails)}">
 			<td th:text="${lv.id}">ID</td>
 			<td th:text="${lv.startDate}">Start Date</td>
 			<td th:text="${lv.endDate}">End Date</td>
@@ -25,14 +25,35 @@
 			<td th:text=${lv.reason}></td>
 			<td th:text="${lv.contactDetail}"></td>
 			<td th:text="${lv.status}">End Date</td>
-
+	<td></td>
 		</tr>
 
 	</table>
 </div>
 </div>
-
-
+<nav aria-label="Pagination" th:if="${leavedetails.totalPages gt 0}">
+    <ul class="pagination justify-content-center font-weight-bold">
+        <li class="page-item" th:classappend="${leavedetails.number eq 0} ? 'disabled'">
+            <a class="page-link"
+               th:href="@{/leave?page={id}(id=${leavedetails.number lt 2 ? 1 : leavedetails.number})}"
+               aria-label="Previous" title="Previous Page" data-toggle="tooltip">
+                <span aria-hidden="true">&laquo;</span>
+            </a>
+        </li>
+        <li class="page-item" th:classappend="${i eq leavedetails.number + 1} ? 'active'"
+            th:each="i : ${#numbers.sequence( 1, leavedetails.totalPages, 1)}">
+            <a class="page-link" th:href="@{/leave?page={id}(id=${i})}" th:text="${i}"
+               th:title="${'Page '+ i}" data-toggle="tooltip"></a>
+        </li>
+        <li class="page-item" th:classappend="${leavedetails.number + 1 eq leavedetails.totalPages} ? 'disabled'">
+            <a class="page-link"
+               th:href="@{/leave?page={id}(id=${leavedetails.number + 2})}"
+               aria-label="Next" title="Next Page" data-toggle="tooltip">
+                <span aria-hidden="true">&raquo;</span>
+            </a>
+        </li>
+    </ul>
+</nav>
 
 </body>
 </html>
