--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -34,14 +34,39 @@
 					th:unless="${#maps.containsKey(employeesManagers, '__${employee.managerid}__')}">Not
 					assigned</td>
 				<td><a th:href="${'/employees/update/' + employee.id}"
-					class="btn btn-primary">Edit</a> <a
-					th:href="${'/employees/delete/' + employee.id}"
-					class="btn btn-danger">Delete</a></td>
-		</table>
-	</div>
-	<br> <br>
+					class="btn btn-primary">Edit</a>
+					<button type="button" class="btn btn-danger" data-toggle="modal"
+						data-target="#modal-warning"
+						th:attr="data-target='#modal-warning'+${employee.id }">
+						Delete Employee</button></td>
 
+					<div class="modal modal-warning fade in" th:id="modal-warning+${employee.id }">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal"
+									aria-label="Close">
+								</button>
+								<h5 class="modal-title"> <i class="fas fa-trash-alt" style="color:red"></i>Delete User</h5>
+							</div>
+							<div class="modal-body">
+								<h3>Are you sure want to delete this Employee?</h3>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-outline pull-left"
+									data-dismiss="modal">Close</button>
+								<a type="button" class="btn btn-danger"
+									th:href="${'/employees/delete/' + employee.id}"><i class="fas fa-trash-alt"></i>&nbsp;Yes</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				</tr>
+		</table>
+
+	</div>
+
+	<br> <br>
 </div>
-</script>
 </body>
 </html>
