--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -24,8 +24,8 @@
          Admin Tools
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/employees/">View All Employee</a>
-          <a class="dropdown-item" href="/employees/add">Add new Employee</a>
+          <a class="dropdown-item" href="/admin/employee/list">View All Employee</a>
+          <a class="dropdown-item" href="/admin/employee/create">Add new Employee</a>
              <a class="dropdown-item" href="/roles">Edit Roles</a>
              </div>
       </li>
