--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 
 		<h1>Edit Employee</h1>
 		<form class="form-horizontal" th:object="${employee}"
-			th:action="@{/authenticate}" method="POST">
+			th:action="@{authenticate}" method="POST">
 
 			<div class="form-group">
 				<div class="col-sm-10">
