fixed employee list view

--- a/src/main/resources/templates/admin/employees.html
+++ b/src/main/resources/templates/admin/employees.html
@@ -57,7 +57,7 @@
 								<button type="button" class="btn btn-outline pull-left"
 									data-dismiss="modal">Close</button>
 								<a type="button" class="btn btn-danger"
-									th:href="${'delete/' + employee.id}"><i class="fas fa-trash-alt"></i>&nbsp;Yes</a>
+									th:href="${'/admin/employee/delete/' + employee.id}"><i class="fas fa-trash-alt"></i>&nbsp;Yes</a>
 							</div>
 						</div>
 					</div>
