--- a/src/main/resources/templates/admin/addemployee.html
+++ b/src/main/resources/templates/admin/addemployee.html
@@ -14,7 +14,7 @@
 	<div>
 
 		<form class="form-horizontal" th:object="${employee}"
-			th:action="@{/admin/employee/employees}" method="POST">
+			th:action="@{/admin/employee/create}" method="POST">
 			
 			
 			<div class="form-group">
