--- a/src/main/resources/templates/admin/editemployee.html
+++ b/src/main/resources/templates/admin/editemployee.html
@@ -10,7 +10,7 @@
 
 	<h1>Edit Employee</h1>
 	<form class="form-horizontal" th:object="${employee}"
-		th:action="@{/admin/employee/update}" method="POST">
+		th:action=${employee.id} method="POST">
 
 	<div class="form-group">
 					<div class="col-sm-10">
