--- a/src/main/resources/templates/admin/addemployee.html
+++ b/src/main/resources/templates/admin/addemployee.html
@@ -5,8 +5,19 @@
 <th:block th:include="layout/header"></th:block>
 </head>
 
-<div id="successMessage" th:if="${message}" th:text="${message}"
-	th:class="${'alert ' + alertClass}" style="text-align: center" /></div>
+<div class="container mt-5"><!-- start of container -->
+<div class="row">
+<div class="col-md-3">
+ <p class ="lead">Admin Menu</p>
+            <div class="list-group">
+            <ul>
+              <li class="list-group-item "><a href="/admin/employee/main">View all employee</a> </li>
+                <li class="list-group-item active">Add new employee</li>
+                <li class="list-group-item">Category3</li>
+            </ul>
+            </div>
+</div>
+<div class="col">
 <div class="container">
 
 	<!-- start of container -->
@@ -73,7 +84,10 @@
 	</div>
 
 </div>
-<!-- end of container -->
+</div>
+</div>
+</div> <!-- end -->
+
 <script>
 $(document).ready(function(){
 	setTimeout(function() {
