--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -24,7 +24,7 @@
          Admin Tools
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/admin/employee/main">View All Employee</a>
+          <a class="dropdown-item" href="/admin/employee/">View All Employee</a>
           <a class="dropdown-item" href="/admin/employee/create">Add new Employee</a>
              <a class="dropdown-item" href="/roles">Edit Roles</a>
              </div>
