--- a/src/main/resources/templates/admin/addemployee.html
+++ b/src/main/resources/templates/admin/addemployee.html
@@ -11,7 +11,7 @@
  <p class ="lead">Admin Menu</p>
             <div class="list-group">
             <ul>
-              <li class="list-group-item "><a href="/admin/employee/main">View all employee</a> </li>
+              <li class="list-group-item "><a href="/admin/employee/">View all employee</a> </li>
                 <li class="list-group-item active">Add new employee</li>
                 <li class="list-group-item">Category3</li>
             </ul>
