--- a/src/main/resources/templates/admin/addemployee.html
+++ b/src/main/resources/templates/admin/addemployee.html
@@ -13,7 +13,7 @@
             <ul>
               <li class="list-group-item "><a href="/admin/employee/">View all employee</a> </li>
                 <li class="list-group-item active">Add new employee</li>
-                <li class="list-group-item">Category3</li>
+            	<li class="list-group-item"><a href="/admin/role/list">View Role</a></li>
             </ul>
             </div>
 </div>
