--- a/src/main/resources/templates/editrole.html
+++ b/src/main/resources/templates/editrole.html
@@ -5,10 +5,24 @@
 <th:block th:include="layout/header"></th:block>
 </head>
 <body>
-	<div class="container mt-5">
-	<h1>Edit Roles Detail</h1>
+<div class="container mt-5">
+	<!-- start of container -->
+	<div class="row">
+		<div class="col-md-3">
+			<p class="lead">Admin Menu</p>
+			<div class="list-group">
+				<ul>
+					<li class="list-group-item"><a href="/admin/employee">View all employee</a></li>
+					<li class="list-group-item"><a href="/admin/employee/create">Add
+							new employee</a></li>
+					<li class="list-group-item active">View Role</li>
+				</ul>
+			</div>
+		</div>
+		<div class="col">
+		<h1>Edit Roles Detail</h1>
 		<form class="form-horizontal" th:object="${roles}"
-			th:action="@{/roles}" method="POST">
+			th:action="@{'update'+role.id}" method="POST">
 			
 			
 			<div class="form-group">
@@ -33,7 +47,21 @@
 			</div>
 		<button class="btn btn-primary">Edit</button>
 		</form>
-
+		</div>
 	</div>
+</div>
+<!-- end -->
+
+
+
+<script>
+	$(document).ready(function() {
+		setTimeout(function() {
+			$('#successMessage').fadeOut('slow');
+		}, 2000); // <-- time in milliseconds
+	});
+</script>
+
+
 </body>
 </html>
