--- a/src/main/resources/templates/viewrole.html
+++ b/src/main/resources/templates/viewrole.html
@@ -5,9 +5,22 @@
 <th:block th:include="layout/header"></th:block>
 </head>
 <body>
-	<div class="container mt-5">
-	
-	<h1>Role Details</h1>
+<div class="container mt-5">
+	<!-- start of container -->
+	<div class="row">
+		<div class="col-md-3">
+			<p class="lead">Admin Menu</p>
+			<div class="list-group">
+				<ul>
+					<li class="list-group-item"><a href="/admin/employee">View all employee</a></li>
+					<li class="list-group-item"><a href="/admin/employee/create">Add
+							new employee</a></li>
+					<li class="list-group-item active">View Role</li>
+				</ul>
+			</div>
+		</div>
+		<div class="col">
+		<h1>Role Details</h1>
 		<table class="table table-striped">
 		<tr>
 			<th>Id</th>
@@ -21,10 +34,33 @@
 			<td th:text="${role.annualleave}"></td>
 			<td th:text="${role.medicalleave}"></td>
 			
-			<td><a th:href="${'/role/update/' + role.id}"
+			<td><a th:href="${'update/' + role.id}"
 					class="btn btn-primary">Edit</a></td>
 		</tr>
-	</table>
+		</table>
+		</div>
 	</div>
+</div>
+<!-- end -->
+
+
+
+<script>
+	$(document).ready(function() {
+		setTimeout(function() {
+			$('#successMessage').fadeOut('slow');
+		}, 2000); // <-- time in milliseconds
+	});
+</script>
+
+
+
+
+
+
+	
+	
+	
+
 </body>
 </html>
