--- a/src/main/resources/templates/admin/addemployee.html
+++ b/src/main/resources/templates/admin/addemployee.html
@@ -5,95 +5,113 @@
 <th:block th:include="layout/header"></th:block>
 </head>
 
-<div class="container mt-5"><!-- start of container -->
-<div class="row">
-<div class="col-md-3">
- <p class ="lead">Admin Menu</p>
-            <div class="list-group">
-            <ul>
-              <li class="list-group-item "><a href="/admin/employee/">View all employee</a> </li>
-                <li class="list-group-item active">Add new employee</li>
-            	<li class="list-group-item"><a href="/admin/role/list">View Role</a></li>
-            </ul>
-            </div>
-</div>
-<div class="col">
-<div class="container">
-
+<div class="container mt-5">
 	<!-- start of container -->
-	<h1>Add a new employee</h1>
-	<div>
-
-		<form class="form-horizontal" th:object="${employee}"
-			th:action="@{/admin/employee/create}" method="POST">
-			
-			
-			<div class="form-group">
-				<div class="col-md-4">
-					<input type="hidden" class="form-control" th:field="*{id}" />
-				</div>
+	<div class="row">
+		<div class="col-md-3">
+			<p class="lead">Admin Menu</p>
+			<div class="list-group">
+				<ul>
+					<li class="list-group-item "><a href="/admin/employee/">View
+							all employee</a></li>
+					<li class="list-group-item active">Add new employee</li>
+					<li class="list-group-item"><a href="/admin/role/list">View
+							Role</a></li>
+				</ul>
 			</div>
+		</div>
+		<div class="col">
+			<div class="container">
+				<!-- start of container -->
+				<h1>Add a new employee</h1>
+				<div>
 
-			<fieldset class="col-md-4">
-				<label for="name">Name: </label> <input 
-					class="form-control" type="text" id="name" th:field="*{name}"/>
-				 <p style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</p>
-			</fieldset>
+					<form class="form-horizontal" th:object="${employee}"
+						th:action="@{/admin/employee/create}" method="POST">
+						<div class="form-group">
+							<div class="col-sm-10">
+								<input type="hidden" class="form-control" th:field="*{id}" />
+							</div>
+						</div>
+						<div class="row">
+							<div class="col">
+								<fieldset class="form-group col">
+									<label for="name">Name :</label> <input class="form-control"
+										type="text" id="name" th:field=*{name}>
+									<p style="color: red" th:if="${#fields.hasErrors('name')}"
+										th:errors="*{name}">Name Error</p>
+								</fieldset>
+							</div>
+							<div class="col">
 
-			<fieldset class="form-group col-md-4">
-				<label for="email">Email : </label> <input class="form-control"
-					type="email" th:field="*{email}">
-					<p style="color:red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">invalid email</p>
-				
-			</fieldset>
+								<fieldset class="form-group col">
+									<label for="email">Email :</label> <input class="form-control"
+										type="email" id="email" th:field=*{email}>
+									<p style="color: red" th:if="${#fields.hasErrors('email')}"
+										th:errors="*{email}">invalid email</p>
+								</fieldset>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col">
+								<fieldset class="form-group col">
+									<label for="password">Password :</label> <input
+										class="form-control" type="text" id="password"
+										th:field="*{password}">
+									<p style="color: red" th:if="${#fields.hasErrors('password')}"
+										th:errors="*{password}">Name Error</p>
+								</fieldset>
+							</div>
+							<div class="col">
+								<fieldset class="form-group col">
+									<label for="userid">User Id</label> <input class="form-control"
+										type="text" id="userid" th:field=*{userid}>
+								</fieldset>
+								<p style="color: red" th:if="${#fields.hasErrors('userid')}"
+									th:errors="*{userid}">Name Error</p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col">
+								<fieldset class="form-group col">
+									<label for="role">Employee role : </label> <select
+										th:field="*{role.id}">
+										<option th:each="role : ${roles}" th:value="${role.id}"
+											th:text="${role.title}"></option>
+									</select>
+								</fieldset>
+							</div>
+							<div class="col">
+								<fieldset class="form-group col">
+									<label for="assignmanager">Assign Manager</label> <select
+										th:field="*{managerid}">
+										<option th:each="emp : ${empWithRole}" th:value="${emp.id}"
+											th:text="${emp.name}"></option>
+									</select>
+								</fieldset>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+								<button class="btn btn-primary">Create new employee</button>
+							</div>
+						</div>
+					</form>
 
-			<fieldset class="form-group col-md-4">
-				<label for="userid">User Id</label> <input class="form-control"
-					type="text" id="userid" th:field="*{userid}" >
-					<p style="color:red" th:if="${#fields.hasErrors('userid')}" th:errors="*{userid}">Name Error</p>
-			
-			</fieldset>
+				</div>
 
-			<fieldset class="form-group col-md-4">
-				<label for="password">Password: </label> <input class="form-control"
-					type="password" id="password" th:field="*{password}">
-					<p style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Name Error</p>
-		
-			</fieldset>
-
-			<fieldset class="form-group col-md-4">
-				<label for="role">Employee role : </label> <select
-					th:field="*{role}">
-					<option th:each="role : ${roles}" th:value="${role.id}"
-						th:text="${role.title}">Null</option>
-				</select>
-			</fieldset>
-
-			<fieldset class="form-group col-md-4">
-				<label for="assignmanager">Assign Manager</label> Manager to assign:
-				<select th:field="*{managerid}">
-					<option th:each="emp : ${empWithRole}" th:value="${emp.id}"
-						th:text="${emp.name}"></option>
-				</select>
-			</fieldset>
-
-			<button type="submit" class="btn btn-primary">Submit</button>
-		</form>
-
-
+			</div>
+		</div>
 	</div>
-
 </div>
-</div>
-</div>
-</div> <!-- end -->
+<!-- end -->
 
 <script>
-$(document).ready(function(){
-	setTimeout(function() {
-	    $('#successMessage').fadeOut('fast');
-	}, 30000); // <-- time in milliseconds
-});
+	$(document).ready(function() {
+		setTimeout(function() {
+			$('#successMessage').fadeOut('fast');
+		}, 30000); // <-- time in milliseconds
+	});
 </script>
 </body>
 </html>
