--- a/src/main/resources/templates/viewrole.html
+++ b/src/main/resources/templates/viewrole.html
@@ -12,7 +12,7 @@
 			<p class="lead">Admin Menu</p>
 			<div class="list-group">
 				<ul>
-					<li class="list-group-item"><a href="/admin/employee">View all employee</a></li>
+					<li class="list-group-item"><a href="/admin/employee/">View all employee</a></li>
 					<li class="list-group-item"><a href="/admin/employee/create">Add
 							new employee</a></li>
 					<li class="list-group-item active">View Role</li>
