--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -87,7 +87,30 @@
 			</div>
 		</div>
 	</div>
-</div>
+ 	<nav aria-label="Pagination" th:if="${totalPages gt 0}">
+    <ul class="pagination justify-content-center font-weight-bold">
+        <li class="page-item" th:classappend="${page eq 0} ? 'disabled'">
+            <a class="page-link"
+               th:href="@{/admin/employee?page={id}(id=${page lt 2 ? 1 : page})}"
+               aria-label="Previous" title="Previous Page" data-toggle="tooltip">
+                <span aria-hidden="true">&laquo;</span>
+            </a>
+        </li>
+        <li class="page-item" th:classappend="${i eq page + 1} ? 'active'"
+            th:each="i : ${#numbers.sequence( 1, totalPages, 1)}">
+            <a class="page-link" th:href="@{/admin/employee?page={id}(id=${i})}" th:text="${i}"
+               th:title="${'Page '+ i}" data-toggle="tooltip"></a>
+        </li>
+        <li class="page-item" th:classappend="${page + 1 eq totalPages} ? 'disabled'">
+            <a class="page-link"
+               th:href="@{/admin/employee?page={id}(id=${page + 2})}"
+               aria-label="Next" title="Next Page" data-toggle="tooltip">
+                <span aria-hidden="true">&raquo;</span>
+            </a>
+        </li>
+    </ul>
+</nav> 
+</div> 
 <!-- end -->
 <script>
 	$(document).ready(function() {
