add leavedetails to controller

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -59,8 +59,7 @@
 								th:attr="data-target='#modal-warning'+${employee.id }">
 								Delete</button></td>
 
-						<div class="modal modal-warning fade in"
-							th:id="modal-warning+${employee.id}">
+						<div class="modal modal-warning fade in" th:id="modal-warning+${employee.id}">
 							<div class="modal-dialog">
 								<div class="modal-content">
 									<div class="modal-header">
