--- a/src/main/resources/templates/leave/editleavedetail.html
+++ b/src/main/resources/templates/leave/editleavedetail.html
@@ -12,11 +12,11 @@
 			<input type="hidden" th:field=*{id}>;
 			<div class="form-group col">
 				<label>Start Date</label> 
-				<input class="form-control" type="text" th:field=*{startDate}>
+				<input class="form-control" type="date" th:field=*{startDate}>
 			</div>
 				<div class="form-group col">
 				<label>end Date</label>
-				 <input class="form-control" type="text" th:field=*{endDate}>
+				 <input class="form-control" type="date" th:field=*{endDate}>
 			</div>
 			</div>
 			
