--- a/src/main/resources/templates/individualLeaveDetails.html
+++ b/src/main/resources/templates/individualLeaveDetails.html
@@ -16,8 +16,8 @@
 		<tr>
 			<td th:text="${subordinate.id}"></td>
 			<td th:text="${subordinate.name}"></td>
-			<td th:text="${subordinate.role.annualleave}"></td>
-			<td th:text="${subordinate.role.medicalleave}"></td>
+			<td th:text="${role.annualleave}"></td>
+			<td th:text="${role.medicalleave}"></td>
 		</tr>
 		 </table>
 	<form th:object="${leaveDetail}" th:action="@{submitreview}" method="post">
@@ -74,7 +74,10 @@
 	<p th:if="${message} != null" th:text="${message}"></p>
 </div>
 
-<div th:each="subordinate : ${subordinates}">
+<h2> Leave Applications in same period</h2>
+
+<p th:if="{$leaveinRange} == null"> No overlapping leave applications for this leave application</p>
+<div the:if="{$leaveinRange} != null" th:each="subordinate : ${subordinates}">
 		<table class="table table-striped">
 			<tr>
 				<td>Staff ID</td>
@@ -98,7 +101,7 @@
 				<td>Details</td>
 				<!--	<td th:text="${itrStat.index}">test</td> -->
 			</tr>
-			<tr th:each="Leavedetail : ${subleave}"
+			<tr th:each="Leavedetail : ${leaveinRange}"
 				th:if="${subordinate.id} == ${Leavedetail.employee.id}">
 				<td th:text="${Leavedetail.id}"><input type="text"
 					th:field="*{Leavedetail.LeaveId}" readonly="readonly" /></td>
@@ -108,9 +111,6 @@
 					th:text="${#temporals.format(Leavedetail.endDate, 'dd-MM-yyyy')}">Nil</td>
 				<td th:text="${Leavedetail.category}">Nil</td>
 				<td th:text="${Leavedetail.status}"></td>
-				<td><a
-					th:href="@{viewIndiLeaveDetails(leaveId=${Leavedetail.id})}">
-						Click here</a></td>
 			</tr>
 		</table>
 		<br />
