--- a/src/main/resources/templates/staff/editleavedetail.html
+++ b/src/main/resources/templates/staff/editleavedetail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
-<title>Modify leaveDetail sssDetails</title>
+<title>Modify Details</title>
 <th:block th:include="layout/header"></th:block>
 </head>
 <body>
