--- a/bin/src/main/resources/templates/editrole.html
+++ b/bin/src/main/resources/templates/editrole.html
@@ -22,7 +22,7 @@
 		<div class="col">
 		<h1>Edit Roles Detail</h1>
 		<form class="form-horizontal" th:object="${roles}"
-			th:action="${roles.id}" method="POST">
+			th:action="@{'update'+role.id}" method="POST">
 			
 			
 			<div class="form-group">
