--- a/src/main/resources/templates/staff/history.html
+++ b/src/main/resources/templates/staff/history.html
@@ -17,6 +17,8 @@
 			<th>Start Date</th>
 			<th>End Date</th>
 			<th>Status</th>
+			<th>Modify</th>
+			<th></th>
 		</tr>
 		<tr th:each="hist : ${pending}">
 			<td th:text=${hist.id}></td>
@@ -24,7 +26,9 @@
 			<td th:text=${hist.endDate}></td>
 			<td th:text=${hist.status}></td>
 			<td><a th:href="${'leave/' + hist.id}"
-				class="btn btn-outline-primary">Edit</a></td>
+				class="btn btn-outline-primary">Edit</a> 
+				<a type="button" class="btn btn-danger" th:href="${'/staff/leave/delete/' + hist.id}">Delete</a>
+			</td>
 		</tr>
 	</table>
 
