--- a/src/main/resources/templates/viewsubleaveapplications.html
+++ b/src/main/resources/templates/viewsubleaveapplications.html
@@ -5,57 +5,53 @@
 <th:block th:include="layout/header"></th:block>
 </head>
 <body>
-
-<div class="container mt-5">
-
-<div th:each="subordinate : ${subordinates}">
-		<table class="table table-striped">
-			<tr>
-				<td>Staff ID</td>
-				<td>Name</td>
-				<td>Balance Annual Leave</td>
-				<td>Balance Medical Leave</td>
-			</tr>
-			<tr>
-				<td th:text="${subordinate.id}"></td>
-				<td th:text="${subordinate.name}"></td>
-				<td th:text="${subordinate.role.annualleave}"></td>
-				<td th:text="${subordinate.role.medicalleave}"></td>
-			</tr>
-			<tr>
-			<tr>
-				<td>Leave ID</td>
-				<td>Start Date</td>
-				<td>End Date</td>
-				<td>Category</td>
-				<td>Status</td>
-				<td>Details</td>
-				<!--	<td th:text="${itrStat.index}">test</td> -->
-			</tr>
-			<tr th:each="Leavedetail : ${subleave}"
-				th:if="${subordinate.id} == ${Leavedetail.employee.id}">
-				<td th:text="${Leavedetail.id}"><input type="text"
-					th:field="*{Leavedetail.LeaveId}" readonly="readonly" /></td>
-				<td
-					th:text="${#temporals.format(Leavedetail.startDate, 'dd-MM-yyyy')}">Nil</td>
-				<td
-					th:text="${#temporals.format(Leavedetail.endDate, 'dd-MM-yyyy')}">Nil</td>
-				<td th:text="${Leavedetail.category}">Nil</td>
-				<td th:text="${Leavedetail.status}"></td>
-				<td><a
-					th:href="@{viewIndiLeaveDetails(leaveId=${Leavedetail.id})}">
-						Click here</a></td>
-			</tr>
-		</table>
-		<br />
-		<br />
-		<br />
-
-	</div>
-</div>
-
+	<div class="container mt-5">
+	<h3><span th:text="${managername}"></span> Subordinates Leave</h3>
 	
-
+		<div th:each="subordinate : ${subordinates}">
+			<table class="table table-striped">
+				<tr>
+					<th>Staff ID</th>
+					<th>Name</th>
+					<th>Balance Annual Leave</th>
+					<th>Balance Medical Leave</th>
+					<th></th>
+					<th></th>
+				</tr>
+				<tr>
+					<td th:text="${subordinate.id}"></td>
+					<td th:text="${subordinate.name}"></td>
+					<td th:text="${subordinate.role.annualleave}"></td>
+					<td th:text="${subordinate.role.medicalleave}"></td>
+				</tr>
+				<tr>
+				<tr>
+					<th>Leave ID</th>
+					<th>Start Date</th>
+					<th>End Date</th>
+					<th>Category</th>
+					<th>Status</th>
+					<th>Details</th>
+					<!--	<td th:text="${itrStat.index}">test</td> -->
+				</tr>
+				<tr th:each="Leavedetail : ${subleave}"
+					th:if="${subordinate.id} == ${Leavedetail.employee.id}">
+					<td th:text="${Leavedetail.id}"><input type="text"
+						th:field="*{Leavedetail.LeaveId}" readonly="readonly" /></td>
+					<td
+						th:text="${#temporals.format(Leavedetail.startDate, 'dd-MM-yyyy')}">Nil</td>
+					<td
+						th:text="${#temporals.format(Leavedetail.endDate, 'dd-MM-yyyy')}">Nil</td>
+					<td th:text="${Leavedetail.category}">Nil</td>
+					<td th:text="${Leavedetail.status}"></td>
+					<td><a
+						th:href="@{viewIndiLeaveDetails(leaveId=${Leavedetail.id})}">
+							Click here</a></td>
+				</tr>
+			</table>
+			<br /> <br /> <br />
+		</div>
+	</div>
 </body>
 </html>
 
